// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles the context menu event on the parent, renders an array of menu items 1`] = `
<div>
  <div
    className="context-menu-root"
  />
</div>
`;

exports[`renders a menu from a promise returned from a function 1`] = `
<div>
  <div
    className="context-menu-root active"
  >
    <div
      className="context-menu-container"
      data-dh-context-menu={true}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onKeyDown={[Function]}
      onMouseLeave={[Function]}
      role="menuitem"
      style={
        {
          "left": NaN,
          "top": NaN,
        }
      }
      tabIndex={0}
    >
      <div
        className="loading"
      >
        <div
          className="loading-spinner loading-spinner-vertical-align"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a promise returning menu items properly 1`] = `
<div>
  <div
    className="context-menu-root active"
  >
    <div
      className="context-menu-container"
      data-dh-context-menu={true}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onKeyDown={[Function]}
      onMouseLeave={[Function]}
      role="menuitem"
      style={
        {
          "left": NaN,
          "top": NaN,
        }
      }
      tabIndex={0}
    >
      <div
        className="context-menu-item"
      >
        <button
          className="btn-context-menu"
          onClick={[Function]}
          onContextMenu={[Function]}
          onMouseMove={[Function]}
          title=""
          type="button"
        >
          <div
            className="btn-context-menu-wrapper"
          >
            <span
              className="icon"
            />
            <span
              className="title"
            >
              Test1
            </span>
          </div>
        </button>
      </div>
      <div
        className="context-menu-item"
      >
        <button
          className="btn-context-menu"
          onClick={[Function]}
          onContextMenu={[Function]}
          onMouseMove={[Function]}
          title=""
          type="button"
        >
          <div
            className="btn-context-menu-wrapper"
          >
            <span
              className="icon"
            />
            <span
              className="title"
            >
              Test2
            </span>
          </div>
        </button>
      </div>
      <div
        className="context-menu-item"
      >
        <button
          className="btn-context-menu"
          onClick={[Function]}
          onContextMenu={[Function]}
          onMouseMove={[Function]}
          title=""
          type="button"
        >
          <div
            className="btn-context-menu-wrapper"
          >
            <span
              className="icon"
            />
            <span
              className="title"
            >
              Test3
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders an empty menu for a rejected promise 1`] = `
<div>
  <div
    className="context-menu-root active"
  >
    <div
      className="context-menu-container"
      data-dh-context-menu={true}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onKeyDown={[Function]}
      onMouseLeave={[Function]}
      role="menuitem"
      style={
        {
          "left": NaN,
          "top": NaN,
        }
      }
      tabIndex={0}
    >
      <div
        className="loading"
      >
        <div
          className="loading-spinner loading-spinner-vertical-align"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders without crashing 1`] = `
<div>
  <div
    className="context-menu-root"
  />
</div>
`;
